--- a/index.html
+++ b/index.html
@@ -55,9 +55,37 @@
                     </button>
                 </div>
             </div>
-            <p></p>
         </div>
     </header>
+    <section class="slider">
+        <div class="container">
+            <div class="row">
+                <!-- отступ слева на одну колонку offset-1 -->
+                <div class="col-4 offset-1">
+                    <span class="label">Bestseller</span>
+                    <h1 class="slider__title">Sweater<br>Choker Neck</h1>
+                    <p class="slider__desc">Women's pearl basic knit sweater with a round neck. Available in several colours. Free shipping to stores.</p>
+                    <button class="button">
+                        <span>$319</span>
+                        <span>Shop now</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="slider__nav">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-1">
+                        <img src="img/Arrow-left.svg" alt="">
+                    </div>
+                    <div class="col-1">
+                        <img src="img/Arrow.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
