--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <div class="col-4 offset-1">
                     <span class="label">Bestseller</span>
                     <h1 class="slider__title">Sweater<br>Choker Neck</h1>
-                    <p class="slider__desc">Women's pearl basic knit sweater with a round neck. Available in several colours. Free shipping to stores.</p>
+                    <p class="slider__desc">Women's pearl basic knit sweater with a round neck. Available in several
+                        colours. Free shipping to stores.</p>
                     <button class="button">
                         <span>$319</span>
                         <span>Shop now</span>
@@ -89,21 +90,98 @@
 
     <section class="card">
         <div class="container">
-            <div class="row">
+            <div class="row card__container">
                 <div class="col-6">
                     <div class="card__wrapper card__wrapper--1">
                         <h3 class="card__title">Fashion Month Ready in Capital Shop</h3>
                         <p class="card__text">Bags & Acsessories & Lingerie & Sportswear &
                             Beauty & Swimwear</p>
-                            <button class="button">
-                                <span>View all</span>
-                                <img src="img/strelka.svg" alt="">
-                            </button>
+                        <button class="button">
+                            <span>View all</span>
+                            <img src="img/strelka.svg" alt="">
+                        </button>
                     </div>
                 </div>
-                <div class="col-6"></div>
-                <div class="col-9"></div>
-                <div class="col-3"></div>
+                <div class="col-6">
+                    <div class="card__wrapper card__wrapper--2">
+                        <h3 class="card__title card__title--white">Catch the Sun: Spring Break Styles From $5.99</h3>
+                        <p class="card__text card__text--white">Sweaters & Hoodies & Puffer Jackets & Coats and Jackets
+                            & Knit</p>
+                        <button class="button">
+                            <span>View all</span>
+                            <img src="img/strelka.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-9">
+
+                    <div class="card__wrapper card__wrapper--3">
+                        <span class="label">Bestseller</span>
+                        <h3 class="card__title">Poplin Top
+                            With Sleeve Bow</h3>
+                        <p class="card__text">Poplin top with roll neckline, long sleeves</p>
+                        <button class="button">
+                            <span>$129</span>
+                            <span>Shop now</span>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="col-3">
+                    <div class="card__wrapper card__wrapper--4">
+                        <h3 class="card__title card__title--white">Printed Shirt with a Bow</h3>
+                        <p class="card__text card__text--pink">Pink/Sky Blue/Yellow</p>
+
+                        <span class="card__price">$129</span>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="goods">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="goods__card">
+                        <span class="goods__marks">New</span>
+                        <img class="picters" src="img/jacket-1.png" alt="jacket">
+                        <h2 class="goods__title">Embroidered Hoodie</h2>
+                        <p class="goods__text">Yellow/Lilac/Fuchsia/Orange</p>
+                        <span class="goods__price">$89</span>
+                    </div>
+
+                </div>
+                <div class="col-3">
+                    <div class="goods__card">
+                        <span class="goods__marks">New</span>
+                        <img class="picters" src="img/jacket-2.png" alt="jacket">
+                        <h2 class="goods__title">Embroidered Hoodie</h2>
+                        <p class="goods__text">Yellow/Lilac/Fuchsia/Orange</p>
+                        <span class="goods__price">$89</span>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="goods__card">
+                        <span class="goods__marks">New</span>
+                        <img class="picters" src="img/jacket-3.png" alt="jacket">
+                        <h2 class="goods__title">Embroidered Hoodie</h2>
+                        <p class="goods__text">Yellow/Lilac/Fuchsia/Orange</p>
+                        <span class="goods__price">$89</span>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="goods__card">
+                        <span class="goods__marks">New</span>
+                        <img class="picters" src="img/jacket-4.png" alt="jacket">
+                        <h2 class="goods__title">Embroidered Hoodie</h2>
+                        <p class="goods__text">Yellow/Lilac/Fuchsia/Orange</p>
+                        <span class="goods__price">$89</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
