--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
 
     <section class="goods">
         <div class="container">
+            <div class="row d-flex justify-content-between align-items-center mb-4">
+                <div class="col-9">
+                    <span class="goods__heading" class="">New Arrival</span>
+                </div>
+                <div class="col-1">
+                    <span class="goods__link">View All</span>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-3">
                     <div class="goods__card">
@@ -185,6 +193,53 @@
             </div>
         </div>
     </section>
+
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-5">
+                    <ul class="footer__list  d-flex justify-content-between">
+                        <li class="footer__info"><a class="footer__link" href="#">Shop</a></li>
+                        <li class="footer__info"><a class="footer__link" href="#">About Us</a></li>
+                        <li class="footer__info"><a class="footer__link" href="#">Careers</a></li>
+                        <li class="footer__info"><a class="footer__link" href="#">FAQ</a></li>
+                        <li class="footer__info"><a class="footer__link" href="#">Blog</a></li>
+                        <li class="footer__info"><a class="footer__link" href="#">Contacts</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-2">
+                    <div class="d-flex justify-content-between ">
+                        <span class="footer__decoration">Follow Us</span>
+                        <img class="footer__cards" src="img/Facebook.svg" alt="">
+                        <img class="footer__cards" src="img/Instagram.svg" alt="">
+                        <img class="footer__cards" src="img/Twitter.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="col-2 d-flex justify-content-end">
+                    <span class="footer__decoration">© 2019 Universal UI Kit</span>
+                </div>
+            </div>
+            <hr class="footer__hr">
+            <div class="row justify-content-between">
+                <div class="col-4 d-flex footer__partners">
+                    <img class="footer__img" src="img/Logo-1.png" alt="">
+                    <img class="footer__img" src="img/Logo-2.png" alt="">
+                    <img class="footer__img" src="img/Logo-3.png" alt="">
+                    <img class="footer__img" src="img/Logo-4.png" alt="">
+                </div>
+
+                <div class="col-2 d-flex justify-content-end align-items-center">
+                    <span class="footer__link">Top</span>
+                    <button class="footer__btn">
+                        <img  src="img/Cart-5.svg" alt="">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
